force-app/main/default/objects/BL_App_Setting__mdt/fields/Custom_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Custom_Parameters__c</fullName>
    <label>Custom Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>