force-app/main/default/objects/BL_App_Setting__mdt/fields/Is_LogActive__c.field-meta.xml
<CustomField>
    <fullName>Is_LogActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Log Active?</label>
    <type>Checkbox</type>
</CustomField>