force-app/main/default/objects/BL_App_Setting__mdt/fields/ProfileSA__c.field-meta.xml
<CustomField>
    <fullName>ProfileSA__c</fullName>
    <label>Profile SA</label>
    <type>TextArea</type>
</CustomField>