force-app/main/default/objects/BL_App_Setting__mdt/fields/Return_Full_Error__c.field-meta.xml
<CustomField>
    <fullName>Return_Full_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Full Error</label>
    <type>Checkbox</type>
</CustomField>